# lite-harness

./: .gitignore  Dockerfile  README.md  entrypoint.sh  start-local.sh
.githooks/: pre-commit  pre-push  setup.sh
.github/workflows/: docker-publish.yml  docker-smoke.yml  lint-root.yml  test.yml
cli/: AGENTS.md  README.md  package-lock.json  package.json
cli/src/: ansi.mjs  client.mjs  config.mjs  harnesses.mjs  input.mjs  renderer.mjs  session-picker.mjs  slash-commands.mjs  slash-commands.test.mjs
docs/: api.md  configuration.md  contributing-harness.md  hermes-provider-plan.md  skill-deploy-agent.md
harnesses/: README.md  agent-file-store.mjs  agent-file-store.test.mjs  agent-plugin.mjs  agent-plugin.test.mjs  agent-run-store.mjs  agent-store.mjs  harness-e2e.test.mjs  harness-sdk.mjs  harness-sdk.test.mjs  help-plugin.mjs  inline-adapter.mjs  lh-pylon-host.mjs  loop-plugin.mjs  loop-store.mjs  memory-store.mjs  package-lock.json  package.json  plugin-registry.mjs  sandbox-provider.mjs  session-store.mjs  session-store.test.mjs  slack-run-stream.mjs  slack-run-stream.test.mjs  slack-thread-context.mjs  slack-thread-context.test.mjs  vault-backend.mjs  vault-plugin.mjs
harnesses/claude-code/: inline-adapter.mjs  package-lock.json  start-local.sh
harnesses/openai-agents/: README.md
harnesses/opencode/: Dockerfile  entrypoint.sh  gen-mcp-config.mjs  gen-mcp-config.test.mjs  inline-adapter.mjs  package.json  sandbox-mcp.mjs  (+2 more)
mcp/: approvals.mjs  approvals.test.mjs  sandbox.mjs  sandbox.test.mjs  tools.mjs
src/sdk/python/: .gitignore  README.md  blocks.py  client.py  decode.py  errors.py  lite_harness.py  messages.py  options.py  pyproject.toml  query.py  transport.py
src/sdk/python/tests/: conftest.py  test_client.py  test_decode.py  test_parity.py  test_query.py
src/sdk/python/tests/fixtures/: fake_server.py
ui/: design.md
(+72 files in other folders)
