[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lite-harness"
version = "0.1.0"
description = "Drop-in replacement for the Claude Agent SDK that talks to a lite-harness server over the stream-json control protocol."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "lite-harness" }]
keywords = ["claude", "agent", "sdk", "lite-harness", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/LiteLLM-Labs/lite-harness"

[tool.hatch.build.targets.wheel]
only-include = [
    "lite_harness.py",
    "query.py",
    "client.py",
    "options.py",
    "messages.py",
    "blocks.py",
    "errors.py",
    "transport.py",
    "decode.py",
    "py.typed",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# CPython asyncio fires BaseSubprocessTransport.__del__ during GC; under
# pytest-asyncio's per-test event loop this can run after the loop closes and
# emit a harmless "Event loop is closed" PytestUnraisableExceptionWarning. It
# is teardown noise, not a leak in our transport (close() awaits proc.wait()).
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.mypy]
strict = true
python_version = "3.10"
files = [
    "lite_harness.py",
    "query.py",
    "client.py",
    "options.py",
    "messages.py",
    "blocks.py",
    "errors.py",
    "transport.py",
    "decode.py",
]
